grab gruntfile build scripts from UI Bootstrap to get CSS to include

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-cjm-directives",
-  "version": "0.0.1",
+  "version": "0.2.0-0",
   "description": "Some simple directives for angular",
   "main": "index.js",
   "scripts": {
@@ -29,11 +29,16 @@
   },
   "homepage": "https://github.com/corymcdonough/angular-cjm-directives#readme",
   "devDependencies": {
+    "colors": "^1.1.2",
     "eslint": "^3.19.0",
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^2.3.0",
+    "grunt-ddescribe-iit": "0.0.7",
     "grunt-eslint": "^19.0.0",
-    "load-grunt-tasks": "^3.5.2"
+    "load-grunt-tasks": "^3.5.2",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
+    "semver": "^5.3.0"
   }
 }
