--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "angular-cjm-directives",
+  "name": "angular-subwindow",
   "version": "0.3.0",
   "description": "Some simple directives for angular",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/corymcdonough/angular-cjm-directives.git"
+    "url": "git+https://github.com/corymcdonough/angular-subwindow.git"
   },
   "keywords": [
     "angular",
@@ -22,27 +22,47 @@
   "author": "Cory McDonough <xcorionx@gmail.com> (https://www.npmjs.com/~corymcd)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/corymcdonough/angular-cjm-directives/issues"
+    "url": "https://github.com/corymcdonough/angular-subwindow/issues"
   },
   "dependencies": {
     "angular": "1.x"
   },
-  "homepage": "https://github.com/corymcdonough/angular-cjm-directives#readme",
+  "homepage": "https://github.com/corymcdonough/angular-subwindow#readme",
   "devDependencies": {
+    "angular": "^1.6.4",
+    "angular-mocks": "^1.6.4",
+    "angular-sanitize": "^1.6.4",
     "babel-eslint": "^7.2.2",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^3.5.0",
     "colors": "^1.1.2",
     "eslint": "^3.19.0",
     "eslint-plugin-angular": "^2.3.0",
+    "eslint-plugin-sinon": "^0.2.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^2.3.0",
     "grunt-ddescribe-iit": "0.0.7",
     "grunt-eslint": "^19.0.0",
+    "grunt-karma": "^2.0.0",
+    "jquery": "^3.2.1",
+    "karma": "^1.6.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon": "^1.0.5",
+    "karma-sinon-chai": "^1.3.1",
     "load-grunt-tasks": "^3.5.2",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
-    "semver": "^5.3.0"
+    "mocha": "^3.2.0",
+    "semver": "^5.3.0",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0"
   }
 }
