--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+dist: trusty
+sudo: required
+
 language: node_js
 node_js:
   - "5.9"
@@ -11,14 +14,15 @@ addons:
       - g++-4.8
 
 before_install:
+  - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sudo apt-get update
+  - sudo apt-get install -y libappindicator1 fonts-liberation
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome*.deb
   - npm install --quiet -g karma
+  - npm install --quiet -g grunt-cli 
 
 install: npm install
-
-before_script:
-  - npm install grunt-cli -g
-
 script: grunt
-sudo: false
