--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,14 @@ addons:
       - g++-4.8
 
 before_install:
-  - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - sudo apt-get update
-  - sudo apt-get install -y libappindicator1 fonts-liberation
-  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-  - sudo dpkg -i google-chrome*.deb
+# The following lines will add Chrome support in Travis
+#  - export CHROME_BIN=/usr/bin/google-chrome
+#  - sudo apt-get update
+#  - sudo apt-get install -y libappindicator1 fonts-liberation
+#  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+#  - sudo dpkg -i google-chrome*.deb
   - npm install --quiet -g karma
   - npm install --quiet -g grunt-cli 
 
